--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -18,20 +18,21 @@ click==8.3.1
 dataclasses-json==0.6.7
 decorator==5.2.1
 distro==1.9.0
-dtw-python==1.7.2
-faiss-cpu==1.13.0
-fastdtw==0.3.4
+dotenv==0.9.9
 filelock==3.20.0
 filetype==1.2.0
 Flask==3.1.2
+flask-cors==6.0.1
 flatbuffers==25.9.23
 frozenlist==1.8.0
 fsspec==2025.10.0
 gast==0.6.0
-google-ai-generativelanguage==0.4.0
+google-ai-generativelanguage==0.6.6
 google-api-core==2.28.1
+google-api-python-client==2.187.0
 google-auth==2.43.0
-google-generativeai==0.4.1
+google-auth-httplib2==0.2.1
+google-generativeai==0.7.2
 google-pasta==0.2.0
 googleapis-common-protos==1.72.0
 grpcio==1.76.0
@@ -40,6 +41,7 @@ h11==0.16.0
 h5py==3.15.1
 hf-xet==1.2.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
 huggingface-hub==0.36.0
 idna==3.11
@@ -50,15 +52,17 @@ joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 keras==3.12.0
-langchain==0.0.354
-langchain-community==0.0.20
-langchain-core==0.1.23
-langchain-google-genai==1.0.1
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-core==0.2.38
+langchain-google-genai==1.0.10
+langchain-openai==0.1.23
+langchain-text-splitters==0.2.4
 langgraph==1.0.4
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.5
-langgraph-sdk==0.2.9
-langsmith==0.0.87
+langgraph-sdk==0.2.10
+langsmith==0.1.147
 lazy_loader==0.4
 libclang==18.1.1
 librosa==0.11.0
@@ -77,14 +81,13 @@ namex==0.1.0
 networkx==3.6
 numba==0.62.1
 numpy==2.2.6
-openai==2.8.1
+openai==1.109.1
 opencv-python==4.12.0.88
 opt_einsum==3.4.0
 optree==0.18.0
 orjson==3.11.4
 ormsgpack==1.12.0
-packaging==23.2
-pandas==2.3.3
+packaging==24.2
 pillow==12.0.0
 platformdirs==4.5.0
 pooch==1.8.2
@@ -94,14 +97,13 @@ protobuf==6.33.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.23
-pydantic==2.12.4
+pydantic==2.12.5
 pydantic_core==2.41.5
 pydub==0.25.1
 Pygments==2.19.2
 PyJWT==2.10.1
-python-dateutil==2.9.0.post0
+pyparsing==3.2.5
 python-dotenv==1.2.1
-pytz==2025.2
 PyYAML==6.0.3
 regex==2025.11.3
 requests==2.32.5
@@ -124,8 +126,8 @@ tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
 termcolor==3.2.0
-tf_keras==2.20.1
 threadpoolctl==3.6.0
+tiktoken==0.12.0
 tokenizers==0.22.1
 torch==2.9.1
 torchvision==0.24.1
@@ -135,7 +137,7 @@ twilio==9.8.7
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 wheel==0.45.1
